/********************************************************************

  Copyright 2012 Konstantin Olkhovskiy <lupus@oxnull.net>

  This file is part of Mersenne.

  Mersenne is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  any later version.

  Mersenne is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Mersenne.  If not, see <http://www.gnu.org/licenses/>.

 ********************************************************************/


/* Acceptor WAL messages */

enum WalRecType {
	Value = 1;
	State = 2;
}

message WalValue {
	required uint64 iid = 1;
	required uint64 b = 2;
	optional bytes content = 3;
	optional uint64 vb = 4;
}

message WalState {
	required uint64 highest_accepted = 1;
	required uint64 highest_finalized = 2;
}

message WalRec {
	required WalRecType type = 1;
	optional WalValue value = 2;
	optional WalState state = 3;
}
